small attempt to fix link clipping in header within index.

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,3 +26,6 @@ nav ul {
 form {
     margin-bottom: 35px;
 }
+header {
+    margin-bottom: 35px;
+}
